# evfmt

./: .evfmtignore  .taplo.toml  .typos.toml  CHANGELOG.markdown  Cargo.toml  LICENSE-MIT  README.markdown  clippy.toml  deny.toml  renovate.json
.github/workflows/: ci.yml  lint.yml  publish.yml  scheduled.yml
docs/: CONTRIBUTING.markdown  SECURITY.md
docs/designs/: README.markdown
docs/designs/core/: formatting-model.markdown  project-principles.markdown
docs/designs/features/: charset-api.markdown  expression-language.markdown  formatter-policy.markdown  sequence-handling.markdown  variation-set-api.markdown
docs/designs/guides/: explanatory-writing.markdown  source-text-stability.markdown  verification-strategy.markdown  workspace-layout.markdown
docs/rationale/: README.markdown  authoring.markdown  formatting-model.markdown  sequence-handling.markdown  source-text-stability.markdown
evfmt/: Cargo.toml  README.markdown  build.rs
evfmt/proptest-regressions/: formatter.txt  scanner.txt
evfmt/src/: analysis.rs  canonical.rs  charset.rs  classify.rs  cli_args.rs  cli_run.rs  expr.rs  findings.rs  formatter.rs  lib.rs  main.rs  policy.rs  presentation.rs  review.rs  scanner.rs  slot.rs  unicode.rs  variation_set.rs
evfmt/src/analysis/: render.rs  tests.rs  types.rs
evfmt/src/canonical/: tests.rs
evfmt/src/charset/: tests.rs
evfmt/src/classify/: tests.rs
evfmt/src/cli_args/: tests.rs
evfmt/src/cli_run/: tests.rs
evfmt/src/expr/: parser.rs
evfmt/src/findings/: fixed.rs  tests.rs
evfmt/src/formatter/: tests.rs
evfmt/src/review/: tests.rs
evfmt/src/scanner/: legacy.rs  tests.rs
evfmt/src/scanner/tests/: cases.rs  legacy.rs
evfmt/src/slot/: tests.rs
evfmt/src/unicode/: tests.rs
evfmt/src/variation_set/: tests.rs
evfmt/tests/: cli.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: scanner_crosscheck.rs  scanner_properties.rs
supply-chain/: audits.toml  config.toml
