[package]
name = "evfmt"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Emoji Variation Formatter"
license = "MIT OR Apache-2.0"
repository = "https://github.com/favonia/evfmt"
homepage = "https://github.com/favonia/evfmt"
documentation = "https://docs.rs/evfmt"
readme = "README.markdown"
keywords = ["emoji", "unicode", "formatter", "cli"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"

[dev-dependencies]
assert_cmd = "=2.2.0"
assert_fs = "=1.1.3"
predicates = "=3.1.4"
proptest = "=1.11.0"
ucd-parse = "=0.1.13"

[lints]
workspace = true
